--- a/portfolio.html
+++ b/portfolio.html
@@ -60,7 +60,16 @@
                 <ul class="section-list prt-work">
                     <li class="galery-item">
                         <a href="" class="portfolio-link">
-                            <img src="images/imgtechcriak.jpg" width="370" alt="Веб-сайт Технокряк">
+                            <div class="portfolio-img">
+                                <img src="images/imgtechcriak.jpg" width="370" alt="Веб-сайт Технокряк">
+                                <div class="text-contein">
+                                    <p class="hidden-text">
+                                        Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю
+                                        получить
+                                        исчерпывающие сведения о компании или частном лице.
+                                    </p>
+                                </div>
+                            </div>
                             <div class="project">
                                 <h2 class="portfolio-title">Технокряк</h2>
                                 <p class="text">Веб-сайт</p>
