create tasc 5 original

--- a/portfolio.html
+++ b/portfolio.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/styles.css">
-    <title>Домашнее_Задание№4</title>
+    <title>Домашнее_Задание№5</title>
 </head>
 <body>
     <header class="page-header">
@@ -76,64 +76,144 @@
                             </div>
                         </a>
                     </li>
-                    <li class="galery-item"> <a href="" class="portfolio-link">
-                            <img src="images/imgneworlean.jpg" width="370" alt="Дизайн постер">
+                    <li class="galery-item"> 
+                        <a href="" class="portfolio-link">
+                            <div class="portfolio-img">
+                                <img src="images/imgneworlean.jpg" width="370" alt="Дизайн постер">
+                                <div class="text-contein">
+                                    <p class="hidden-text">
+                                        Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю
+                                        получить
+                                        исчерпывающие сведения о компании или частном лице.
+                                    </p>
+                                </div>
+                            </div>
                             <div class="project">
                                 <h2 class="portfolio-title">Постер New Orlean vs Golden Star</h2>
                                 <p class="text">Дизайн</p>
                             </div>
                         </a>
                     </li>
-                    <li class="galery-item"> <a href="" class="portfolio-link">
-                            <img src="images/imgseafood.jpg" width="370" alt="приложение ресторана Seafood">
+                    <li class="galery-item"> 
+                        <a href="" class="portfolio-link">
+                            <div class="portfolio-img">
+                                <img src="images/imgseafood.jpg" width="370" alt="приложение ресторана Seafood">
+                                <div class="text-contein">
+                                    <p class="hidden-text">
+                                        Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю
+                                        получить
+                                        исчерпывающие сведения о компании или частном лице.
+                                    </p>
+                                </div>
+                            </div>
                             <div class="project">
                                 <h2 class="portfolio-title">Ресторан Seafood</h2>
                                 <p class="text">Приложение</p>
                             </div>
                         </a>
                     </li>
-                    <li class="galery-item"> <a href="" class="portfolio-link">
-                            <img src="images/imgprime.jpg" width="370" alt="Маркетинг проекта Prime">
+                    <li class="galery-item"> 
+                        <a href="" class="portfolio-link">
+                            <div class="portfolio-img">
+                                <img src="images/imgprime.jpg" width="370" alt="Маркетинг проекта Prime">
+                                <div class="text-contein">
+                                    <p class="hidden-text">
+                                        Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю
+                                        получить
+                                        исчерпывающие сведения о компании или частном лице.
+                                    </p>
+                                </div>
+                            </div>
                             <div class="project">
                                 <h2 class="portfolio-title">Проект Prime</h2>
                                 <p class="text">Маркетинг</p>
                             </div>
                         </a>
                     </li>
-                    <li class="galery-item"> <a href="" class="portfolio-link">
-                            <img src="images/imgboxes.jpg" width="370" alt=" приложение проект Boxes">
+                    <li class="galery-item"> 
+                        <a href="" class="portfolio-link">
+                            <div class="portfolio-img">
+                                <img src="images/imgboxes.jpg" width="370" alt=" приложение проект Boxes">
+                                <div class="text-contein">
+                                    <p class="hidden-text">
+                                        Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю
+                                        получить
+                                        исчерпывающие сведения о компании или частном лице.
+                                    </p>
+                                </div>
+                            </div>
                             <div class="project">
                                 <h2 class="portfolio-title">Проект Boxes</h2>
                                 <p class="text">Приложение</p>
                             </div>
                         </a>
                     </li>
-                    <li class="galery-item"> <a href="" class="portfolio-link">
-                            <img src="images/imgborders.jpg" width="370" alt="страничка Inspiration has no Borders ">
+                    <li class="galery-item"> 
+                        <a href="" class="portfolio-link">
+                            <div class="portfolio-img">
+                                <img src="images/imgborders.jpg" width="370" alt="страничка Inspiration has no Borders ">
+                                <div class="text-contein">
+                                    <p class="hidden-text">
+                                        Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю
+                                        получить
+                                        исчерпывающие сведения о компании или частном лице.
+                                    </p>
+                                </div>
+                            </div>
                             <div class="project">
                                 <h2 class="portfolio-title">Inspiration has no Borders</h2>
                                 <p class="text">Веб-сайт</p>
                             </div>
                         </a>
                     </li>
-                    <li class="galery-item"> <a href="" class="portfolio-link">
-                            <img src="images/imglimid.jpg" width="370" alt="Дизайн издания LE">
+                    <li class="galery-item"> 
+                        <a href="" class="portfolio-link">
+                            <div class="portfolio-img">
+                                <img src="images/imglimid.jpg" width="370" alt="Дизайн издания LE">
+                                <div class="text-contein">
+                                    <p class="hidden-text">
+                                        Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю
+                                        получить
+                                        исчерпывающие сведения о компании или частном лице.
+                                    </p>
+                                </div>
+                            </div>
                             <div class="project">
                                 <h2 class="portfolio-title">Издание Limited Edition</h2>
                                 <p class="text">Дизайн</p>
                             </div>
                         </a>
                     </li>
-                    <li class="galery-item"> <a href="" class="portfolio-link">
-                            <img src="images/imglab.jpg" width="370" alt="маркетинг проекта ЛАБ">
+                    <li class="galery-item"> 
+                        <a href="" class="portfolio-link">
+                            <div class="portfolio-img">
+                                <img src="images/imglab.jpg" width="370" alt="маркетинг проекта ЛАБ">
+                                <div class="text-contein">
+                                    <p class="hidden-text">
+                                        Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю
+                                        получить
+                                        исчерпывающие сведения о компании или частном лице.
+                                    </p>
+                                </div>
+                            </div>
                             <div class="project">
                                 <h2 class="portfolio-title">Проект LAB</h2>
                                 <p class="text">Маркетинг</p>
                             </div>
                         </a>
                     </li>
-                    <li class="galery-item"> <a href="" class="portfolio-link">
-                            <img src="images/imgbissens.jpg" width="370" alt="приложение бизнеса">
+                    <li class="galery-item"> 
+                        <a href="" class="portfolio-link">
+                            <div class="portfolio-img">
+                                <img src="images/imgbissens.jpg" width="370" alt="приложение бизнеса">
+                                <div class="text-contein">
+                                    <p class="hidden-text">
+                                        Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю
+                                        получить
+                                        исчерпывающие сведения о компании или частном лице.
+                                    </p>
+                                </div>
+                            </div>
                             <div class="project">
                                 <h2 class="portfolio-title">Growing Business</h2>
                                 <p class="text">Приложение</p>
